Bug #36110
mgr crash on scrub of unconnected osd
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
2018-09-21 09:08:33.291 7f26c1c6e700 1 -- 127.0.0.1:6814/19768 --> 127.0.0.1:50476/3032923134 -- command_reply(tid 0: -11 pg 1.0 primary osd.1 is not currently connected) v1 -- 0x7f26b40355e0 con 0 2018-09-21 09:08:33.293 7f26c1c6e700 -1 *** Caught signal (Segmentation fault) ** in thread 7f26c1c6e700 thread_name:ms_dispatch ceph version 14.0.0-3539-g1312bbfc8d (1312bbfc8de11fe996e36559cfc510093fba87fb) nautilus (dev) 1: (()+0x11fc0) [0x7f2726864fc0] 2: (DaemonServer::_handle_command(MCommand*, std::shared_ptr<CommandContext>&)+0x1f28) [0x5634ddbeda68] 3: (DaemonServer::handle_command(MCommand*)+0xca) [0x5634ddbf786a] 4: (DaemonServer::ms_dispatch(Message*)+0x7d) [0x5634ddbf921d] 5: (Dispatcher::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x26) [0x5634ddc06cc6] 6: (DispatchQueue::entry()+0x100a) [0x7f27290d896a] 7: (DispatchQueue::DispatchThread::entry()+0xd) [0x7f272918430d] 8: (()+0x7594) [0x7f272685a594] 9: (clone()+0x3f) [0x7f27253e700f] NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
fixed by commint 'mgr/DaemonServer: add missing return' in https://github.com/ceph/ceph/pull/24095
Related issues
History
#1 Updated by Sage Weil over 4 years ago
- Status changed from Fix Under Review to Pending Backport
see commit 28debec0
#2 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #36464: luminous: mgr crash on scrub of unconnected osd added
#3 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #36465: mimic: mgr crash on scrub of unconnected osd added
#4 Updated by Nathan Cutler about 4 years ago
- Status changed from Pending Backport to Resolved