mgr/DaemonServer: add missing return

Fixes: http://tracker.ceph.com/issues/36110
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 28debec0f366dd6ead8ae2e263a6683c71f86d4c)